--- a/corePackages/Core.Packages/Core.Persistence/Core.Persistence.csproj
+++ b/corePackages/Core.Packages/Core.Persistence/Core.Persistence.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="EntityFrameworkCore.Query" Version="1.3.1.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.3" />
+    <PackageReference Include="System.Linq.Dynamic.Core" Version="1.3.10" />
   </ItemGroup>
 
 </Project>
